--- a/src/main/resources/templates/index.xhtml
+++ b/src/main/resources/templates/index.xhtml
@@ -37,12 +37,17 @@
                 <a href="#" th:onclick="|window.location.href='/createdemo'|" class="list-group-item list-group-item-action"> <i class="fas fa-users fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Create Demo</span> </a>
                 <a href="#" th:onclick="|window.location.href='/createstudio'|" class="list-group-item list-group-item-action"> <i class="fas fa-video fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Create Studio</span></a>
                 <a href="#" th:onclick="|window.location.href='/createevent'|" class="list-group-item list-group-item-action"> <i class="fas fa-calendar-alt fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 17px">Create Event</span></a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-film fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 13px">Create Stream</span></a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-tv fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 6px">Watch Event</span></a> <!-- disabled to the class will disable-->
+                <a href="#" th:onclick="|window.location.href='/createstream'|" class="list-group-item list-group-item-action"><i class="fas fa-film fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 13px">Create Stream</span></a>
+                <a href="#" th:onclick="|window.location.href='/watchevent'|" class="list-group-item list-group-item-action"><i class="fas fa-tv fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 6px">Watch Event</span></a>
+                <a href="#" th:onclick="|window.location.href='/offermovie'|" class="list-group-item list-group-item-action"> <i class="fas fa-users-cog fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Offer Movie</span> </a>
+                <a href="#" th:onclick="|window.location.href='/offerppv'|" class="list-group-item list-group-item-action"> <i class="fas fa-users-cog fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Offer PPV</span> </a>
+                <a href="#" th:onclick="|window.location.href='/updatedemo'|" class="list-group-item list-group-item-action"> <i class="fas fa-users-cog fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Update Demo</span> </a>
                 <a href="#" th:onclick="|window.location.href='/displaydemo'|" class="list-group-item list-group-item-action"> <i class="fas fa-users-cog fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Display Demo</span> </a>
-                <a href="#" class="list-group-item list-group-item-action"> <i class="fas fa-ticket-alt fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Display Event</span></a>
+                <a href="#" th:onclick="|window.location.href='/displayevents'|" class="list-group-item list-group-item-action"> <i class="fas fa-ticket-alt fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 10px">Display Events</span></a>
                 <a href="#" th:onclick="|window.location.href='/displaystudio'|" class="list-group-item list-group-item-action"> <i class="fas fa-file-video fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 17px">Display Studio</span></a>
-                <a href="#" class="list-group-item list-group-item-action"> <i class="fas fa-piggy-bank fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 13px">Display Offers</span></a>
+                <a href="#" th:onclick="|window.location.href='/displaystream'|" class="list-group-item list-group-item-action"> <i class="fas fa-file-video fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 17px">Display Stream</span></a>
+                <a href="#" th:onclick="|window.location.href='/displayoffers'|" class="list-group-item list-group-item-action"> <i class="fas fa-piggy-bank fa-2x" style=" margin-left: 25px;"></i> <span style="margin-left: 13px">Display Offers</span></a>
+
             </div>
         </div>
     </div>
