--- a/src/main/resources/templates/displaydemo.xhtml
+++ b/src/main/resources/templates/displaydemo.xhtml
@@ -55,6 +55,18 @@
                     <small id="shortNameHelp" class="form-text text-muted">Enter Demogroup ShortName</small>
                     <div class="invalid-feedback">Short Name Cannot be Empty</div>
                 </div>
+                <div class="form-group">
+                    <label for="datepicker">Creation Date:</label>
+                    <div class="input-group">
+                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${demo.currentMonthYear}" th:value="${demo.currentMonthYear}" required="required"/>
+                        <label class="input-group-btn" for="datepicker">
+                            <span class="btn btn-default">
+                            <span class="fa fa-calendar open-datetimepicker"></span>
+                             </span>
+                        </label>
+                    </div>
+                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
@@ -64,6 +76,9 @@
                 <span th:text ="${demo.shortName} ?: ''"></span>
                 <span th:text ="${demo.longName} ?: ''"></span>
                 <span th:text ="${demo.numberOfAccounts} ?: ''"></span>
+                <span th:text ="${transactionSummary.currentPeriod}"></span>
+                <span th:text ="${transactionSummary.previousPeriod}"></span>
+                <span th:text ="${transactionSummary.total}"></span>
             </form>
         </div>
     </div>
