--- a/src/main/resources/templates/displaystream.xhtml
+++ b/src/main/resources/templates/displaystream.xhtml
@@ -47,12 +47,28 @@
                     <small id="shortNameHelp" class="form-text text-muted">Enter Stream ShortName</small>
                     <div class="invalid-feedback">Short Name Cannot be Empty</div>
                 </div>
+                <div class="form-group">
+                    <label for="datepicker">Creation Date:</label>
+                    <div class="input-group">
+                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${stream.currentMonthYear}" th:value="${stream.currentMonthYear}" required="required"/>
+                        <label class="input-group-btn" for="datepicker">
+                            <span class="btn btn-default">
+                            <span class="fa fa-calendar open-datetimepicker"></span>
+                             </span>
+                        </label>
+                    </div>
+                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
             <span th:text ="${stream.shortName}"></span>
             <span th:text ="${stream.longName}"></span>
             <span th:text ="${stream.subscriptionPrice}"></span>
+            <span th:text ="${transactionSummary.currentPeriod}"></span>
+            <span th:text ="${transactionSummary.previousPeriod}"></span>
+            <span th:text ="${transactionSummary.total}"></span>
+            <span th:text ="${transactionSummary.licensing}"></span>
         </div>
     </div>
  </div>
